@startuml

title __SRC's Class Diagram__\n

  namespace  src{
    abstract class Canard {
        {abstract} + afficher()
        + cancaner()
        + nager()
        + voler()
    }
  }
  

  namespace src {
    class CanardEnPlastique {
        + CanardEnPlastique()
        + afficher()
    }
  }
  

  namespace src {
    class Colvert {
        + Colvert()
        + afficher()
    }
  }
  

  namespace src {
    class SuperCanard {
        {static} + main()
    }
  }
  

  namespace src  {
    class SuperCanardTest {
        {static} ~ bilanAssertions : int
        ~ clavierProgrammeATester : BufferedWriter
        ~ ecranProgrammeATester : BufferedReader
        ~ executionProgrammeATester : Process
        ~ finDeLigne : String
        {static} ~ programmeATester : String
        {static} ~ totalAssertions : int
        {static} + main()
        + test_ligne1()
        + test_ligne2()
        + test_ligne3()
        + test_ligne4()
        # setUp()
    }
  }
  

  namespace src {
    class SuperCanardTest2 {
        - oldStream : PrintStream
        - outContent : ByteArrayOutputStream
        + cleanUpStreams()
        + setUpStreams()
        + testComportementCanardEnPlastique()
        + testComportementColvert()
        - readLine()
    }
  }
  

  Canard o-- cancaner.ComportementCancan : cancanObj
  Canard o-- voler.ComportementVol : volerObj
  CanardEnPlastique -up-|> Canard
  Colvert -up-|> Canard
  SuperCanardTest -up-|> junit.framework.TestCase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
